# IncX_WebApplication

./: Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: continuous_deployment.yml
home/: urls.py  views.py
incx_web_application/: asgi.py  settings.py  urls.py  wsgi.py
templates/: home.html
