[tool.poetry]
name = "incx-web-application"
version = "0.1.0"
description = ""
authors = ["Santiago Calderón <santiagocalderon1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
django = "^5.0.7"
incrementalexplainer = {git = "https://github.com/SantiagoCalderon1999/IncrementalExplainer.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
